--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+combblas (1.6.2-6deepin0) unstable; urgency=medium
+
+  * No source change upload against GCC 12.
+
+ -- Tianyu Chen <sweetyfish@deepin.org>  Thu, 19 Sep 2024 22:44:05 +0800
+
 combblas (1.6.2-6) unstable; urgency=medium
 
   * debian patch AWPM_library_38dd27e.patch applies patch from
